--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,12 @@
         "symfony/polyfill-php81": "*"
     },
     "scripts": {
+        "start-project": [
+          "composer install",
+          "symfony console doctrine:database:create",
+          "symfony console make:migration",
+          "symfony console doctrine:migration:migrate"
+        ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
